--- a/beamerfontthememinflat.sty
+++ b/beamerfontthememinflat.sty
@@ -15,7 +15,7 @@
 
 \usepackage[protrusion=true]{microtype}
 \usepackage{polyglossia}
-%\setdefaultlanguage{portuguese}
+\setdefaultlanguage{portuguese}
 
 %\usefonttheme{professionalfonts}
 %\usepackage{fontspec,unicode-math}
