--- a/QO/Hidrocarbonetos/HidrocarbonetosI.org
+++ b/QO/Hidrocarbonetos/HidrocarbonetosI.org
@@ -1,8 +1,34 @@
 * Hidrocarbonetos
 ** Hidrocarbonetos
-   São compostos orgânicos formados exclusivamente por átomos de carbono e de hidrogênio.
+  
 #+begin_export latex
-%\include{../img/diagrama}
+\begin{tikzpicture}
+\begin{scope}[yshift=5cm,xshift=6.5cm]
+			\coordinate (dv) at (0,0);
+			\coordinate (base) at (35pt,0pt);
+			\coordinate (height) at (0pt,35pt);
+			\coordinate (diag) at ($(base)+(height)$);
+			\fill[rounded corners=2pt, yellow3] ($(dv)-.5*(diag)$) rectangle +(diag); 
+			\node[white] at (dv) {\sffamily\huge H};
+			\node[white, inner sep=2pt] (dvtext) at ($(dv)-.5*(height)$) [anchor=south] {\sffamily\tiny Hidrogênio};
+			\node[white, inner sep=2pt] (dvnum) at ($(dv)+.5*(height)-.5*(base)$) [anchor=north west] {\sffamily\tiny 1};
+		\end{scope}
+		\begin{scope}[yshift=5cm, xshift=0cm]
+		\node[draw=none] (0,10) {$\bullet$ São compostos orgânicos formados exclusivamente por átomos de C e de H.
+			};
+		\end{scope}
+		\begin{scope}[yshift=5cm,xshift=-7cm]
+		\coordinate (dv) at (0,0);
+		\coordinate (base) at (35pt,0pt);
+		\coordinate (height) at (0pt,35pt);
+		\coordinate (diag) at ($(base)+(height)$);
+		\fill[rounded corners=2pt, violet3] ($(dv)-.5*(diag)$) rectangle +(diag); 
+		\node[white] at (dv) {\sffamily\huge C};
+		\node[white, inner sep=2pt] (dvtext) at ($(dv)-.5*(height)$) [anchor=south] {\sffamily\tiny Carbono};
+		\node[white, inner sep=2pt] (dvnum) at ($(dv)+.5*(height)-.5*(base)$) [anchor=north west] {\sffamily\tiny 6};
+		\end{scope}
+		\end{tikzpicture}
+\include{QO/Hidrocarbonetos/diagrama}
 #+end_export
 
 
@@ -17,42 +43,45 @@
 
 ** Frações Típicas do Petróleo
 
-#+begin_export latex
-{\centering \small
-\begin{talltblr}{
-		colspec = {rccc}, colsep = 2mm, hlines = {2pt, white},
-		row{odd} = {brown8}, row{even} = {gray8},
-		row{1} = {2em,azure2,fg=white,font=\bfseries\sffamily},
-		%row{2-Z} = {3em,font=\large},
-	}
-%	\hline
-	 Fração   &  {Temperatura \\ Ebulição (°C)}   &  {Composição \\  aproximada}  &  Usos \\
-%	\hline
-	Gás residual & - &  \ch{C1-C2} & gás combustível\\
-	\hline
-	{Gás liquefeito \\ de petróleo - GLP} & Até 40 &  \ch{C3-C4}  & gás para uso doméstico e indrustrial\\
-	\hline
-	Gasolina & 40-175 & \ch{C5-C10} & automóveis, solvente\\
-	\hline
-	Querosene & 175-235 & \ch{C11-C12} & iluminação, combustível aviões\\
-	\hline
-	Gasoléo leve & 235-305 & \ch{C13-C17} & diesel, fornos\\
-	\hline
-	Gasoléo pesado & 305-400 & \ch{C18-C25} & combustível, lubrificantes\\
-	\hline
-	Lubrificantes & 400-510 & \ch{C26-C38} & óleos librificantes\\
-	\hline
-	Resíduo & Acima de 510 & \ch{C38-} & asfalto, piche, impermeabilizantes \\
-	\hline
-\end{talltblr}
-}
 
+#+begin_export  latex
+%		{\centering \small
+			\begin{talltblr}[
+				theme= fancy,
+				caption={Composição do Petróleo},
+				]{
+					colspec = {lccc}, colsep = 2mm, hlines = {2pt, white},
+					row{odd} = {brown8}, row{even} = {gray8},
+					row{1} = {2em,azure2,fg=white,font=\bfseries},
+					%row{2-Z} = {3em,font=\large},
+				}
+				%	\hline
+				Fração   &  {Temperatura de Ebulição (°C)}   &  {Composição \\  aproximada}  &  Usos \\
+				%	\hline
+				Gás residual & - &  \ch{C1-C2} & gás combustível\\
+				\hline
+				{Gás liquefeito \\ de petróleo - GLP} & Até 40 &  \ch{C3-C4}  & gás para uso doméstico e indrustrial\\
+				\hline
+				Gasolina & 40-175 & \ch{C5-C10} & automóveis, solvente\\
+				\hline
+				Querosene & 175-235 & \ch{C11-C12} & iluminação, combustível aviões\\
+				\hline
+				Gasoléo leve & 235-305 & \ch{C13-C17} & diesel, fornos\\
+				\hline
+				Gasoléo pesado & 305-400 & \ch{C18-C25} & combustível, lubrificantes\\
+				\hline
+				Lubrificantes & 400-510 & \ch{C26-C38} & óleos librificantes\\
+				\hline
+				Resíduo & Acima de 510 & \ch{C38-} & asfalto, piche, impermeabilizantes \\
+				\hline
+			\end{talltblr}
+%		}
 #+end_export
 
 * Classificação
 
 ** Grupos 
-- Os nomes /alcanos/, /alcenos/, /alcinos/, /alcadienos/ /ciclanos/, /ciclenos/ e /aromáticos/ designam grupos aos quais os hidrocarbonetos pertencem
+- Os nomes *alcanos*, *alcenos*, *alcinos*, *alcadienos*, *ciclanos*, *ciclenos* e *aromáticos* designam grupos aos quais os hidrocarbonetos pertencem
 #+begin_export latex
 \include{img/hidro.tex}
 #+end_export
@@ -64,14 +93,14 @@
 #+begin_export latex
 	
 	\begin{longtblr}[
-%		theme = fancy,
+		theme = fancy,
 		caption = {Subdivisões importantes dos hidrocarbonetos},
 		entry = {Short Caption},
 		label = {tblr:test},
 		]{
 		colspec = {cccc}, colsep = 2mm, hlines = {2pt, white},
 		rowsep = 3.5pt, %% space line 
-		row{1} = {2em,purple7,fg=white,font=\bfseries\sffamily},
+		row{1} = {2em,azure2,fg=white,font=\bfseries\sffamily},
 		 }
 \hline
 Subgrupo  & Característica  & Exemplos  & Fórmula geral \\
@@ -206,7 +235,7 @@ ona & cet \alert{ona}\\
 #+begin_question
 (*FATEC*) O hidrocarboneto que apresenta a menor quantidade de átomos de H por molécula é:
 
-#+ATTR_LATEX: :options (2)
+#+ATTR_LATEX: :options (5)
 #+begin_choice
 \choice metano.
 \choice etano.
@@ -215,27 +244,27 @@ ona & cet \alert{ona}\\
 \choice propino.
 #+end_choice
 #+end_question
-\pagebreak
-\pause 
+\only<1>
+#+ATTR_LATEX: :options [print=true]
 #+begin_answer
 (*FATEC*) O hidrocarboneto que apresenta a menor quantidade de átomos de H por molécula é:
 
-#+ATTR_LATEX: :options (2)
+#+ATTR_LATEX: :options (5)
 #+begin_choice
 \choice metano.
 \choice etano.
 \choice eteno.
-\choice etino.
+\choice *etino*.
 \choice propino.
 #+end_choice
 
-Os compostos etano e propano são hidrocarbonetos da classe dos alcanos. Portanto apresentam o número de hidrogênios maior que o número de carbonos, pois sua fórmula geral é @@latex: \mathrm{\ch{C_nH_{2n+2}}}@@.
+Os compostos etano e propano são hidrocarbonetos da classe dos alcanos. Portanto apresentam o número de hidrogênios maior que o número de carbonos, pois sua fórmula geral é @@latex: \ch{C_nH_{2n+2}}@@.
 
-O eteno apresenta ligação dupla entre os dois carbonos, pois é um alceno de fórmula geral @@latex: \mathrm{\ch{C_nH_{2n}}}@@.
+O eteno apresenta ligação dupla entre os dois carbonos, pois é um alceno de fórmula geral @@latex: \ch{C_nH_{2n}}@@.
 
-Etino e propino são alcinos, pois possuem uma tripla ligação entre os carbonos. Entretanto, o propino possui um maior número de hidrogênios, já que possui um carbono a mais na cadeia. A fórmula geral de um alcino é @@latex: \mathrm{\ch{C_nH_{2n-2}}}@@.
+Etino e propino são alcinos, pois possuem uma tripla ligação entre os carbonos. Entretanto, o propino possui um maior número de hidrogênios, já que possui um carbono a mais na cadeia. A fórmula geral de um alcino é @@latex: \ch{C_nH_{2n-2}}@@.
 
-Portanto, o etino possui apenas dois átomos de carbono (\ch{C2H2}), sendo o alcino mais simples
+Portanto, o *etino* possui apenas dois átomos de carbono (\ch{C2H2}), sendo o alcino mais simples
 #+end_answer
 
 
