--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-% Created 2024-07-26 Fri 04:28
+% Created 2024-07-28 Sun 07:09
 % Intended LaTeX compiler: lualatex
 \documentclass[presentation,professionalfonts,smaller,aspectratio=169]{beamer}
                 
@@ -168,8 +168,8 @@ title=#2,#1}
 
 
 \section{Hidrocarbonetos}
-\label{sec:org6d24bc8}
-\begin{frame}[label={sec:orgb55b9a3}]{Hidrocarbonetos}
+\label{sec:org8cfe2cc}
+\begin{frame}[label={sec:org08eae73}]{Hidrocarbonetos}
 \begin{tikzpicture}
 \begin{scope}[yshift=5cm,xshift=6.5cm]
 			\coordinate (dv) at (0,0);
@@ -201,7 +201,7 @@ title=#2,#1}
 
 
 
-\begin{frame}[label={sec:org469369f}]{Hidrocarbonetos}
+\begin{frame}[label={sec:org649e204}]{Hidrocarbonetos}
 \begin{itemize}
 \item Podem ser obtidos a partir da destilação fracionada do petróleo. Esquema de uma torre de fracionamento.
 \end{itemize}
@@ -209,11 +209,11 @@ title=#2,#1}
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=0.4\textwidth]{QO/Hidrocarbonetos/torre.jpg}
-\caption{\label{fig:orgdaff712}Esquema de uma torre de fracionamento.}
+\caption{\label{fig:orgf2d9565}Esquema de uma torre de fracionamento.}
 \end{figure}
 \end{frame}
 
-\begin{frame}[label={sec:org8cdbb05}]{Frações Típicas do Petróleo}
+\begin{frame}[label={sec:org8b7a4e9}]{Frações Típicas do Petróleo}
 %		{\centering \small
 			\begin{talltblr}[
 				theme= fancy,
@@ -248,9 +248,9 @@ title=#2,#1}
 \end{frame}
 
 \section{Classificação}
-\label{sec:org7c11bdb}
+\label{sec:org2f33f5f}
 
-\begin{frame}[label={sec:orge82f39f}]{Grupos}
+\begin{frame}[label={sec:org7d2eaf2}]{Grupos}
 \begin{itemize}
 \item Os nomes \alert{alcanos}, \alert{alcenos}, \alert{alcinos}, \alert{alcadienos}, \alert{ciclanos}, \alert{ciclenos} e \alert{aromáticos} designam grupos aos quais os hidrocarbonetos pertencem
 \end{itemize}
@@ -292,7 +292,7 @@ Subgrupo  & Característica  & Exemplos  & Fórmula geral \\
 
 
 \section{Nomenclatura}
-\label{sec:orgff50c38}
+\label{sec:org9122c2c}
 \begin{frame}[allowframebreaks]{Nomenclatura dos compostos orgânicos}
 \begin{myrule}{Regra}
 \begin{itemize}
@@ -304,7 +304,7 @@ Subgrupo  & Característica  & Exemplos  & Fórmula geral \\
 \end{myrule}
 \end{frame}
 
-\begin{frame}[label={sec:org2985bd8}]{Nomenclatura dos compostos orgânicos}
+\begin{frame}[label={sec:orgeb0563a}]{Nomenclatura dos compostos orgânicos}
 \begin{itemize}
 \item O prefixo, a parte inicial, indica o número de átomos de carbono presentes na molécula.
 \end{itemize}
@@ -334,7 +334,7 @@ dec & 10 & icosa & 20\\[0pt]
 \end{longtblr}
 \end{frame}
 
-\begin{frame}[label={sec:orge546c53}]{Nomenclatura dos compostos orgânicos}
+\begin{frame}[label={sec:org009e952}]{Nomenclatura dos compostos orgânicos}
 \begin{itemize}
 \item O \alert{infixo} indica o tipo de ligação química entre os átomos de carbono.
 \end{itemize}
@@ -362,7 +362,7 @@ in & tripla\\
 
 
 
-\begin{frame}[label={sec:orga7e2930}]{Nomenclatura dos compostos orgânicos}
+\begin{frame}[label={sec:org78477cb}]{Nomenclatura dos compostos orgânicos}
 \begin{itemize}
 \item O \alert{sufixo}, a parte final, indica a \alert{classe funcional do composto}.
 \end{itemize}
@@ -391,7 +391,7 @@ ona & cet \alert{ona}\\
 
 
 \section{Exercícios}
-\label{sec:org639d180}
+\label{sec:orgac1d608}
 \begin{frame}[allowframebreaks]{Exemplos}
 \begin{question}
 (\alert{FATEC}) O hidrocarboneto que apresenta a menor quantidade de átomos de H por molécula é:
@@ -428,7 +428,7 @@ Portanto, o \alert{etino} possui apenas dois átomos de carbono (\ch{C2H2}), sen
 
 
 
-\begin{frame}[label={sec:org1c4e359}]{Fim da Aula}
+\begin{frame}[label={sec:org33a548a}]{Fim da Aula}
 \begin{tikzpicture}
 \node[graduate,sword, minimum size=1cm]{ \bfseries Bons Estudos !!!!};
 \end{tikzpicture}
