--- a/QO/Hidrocarbonetos/diagrama.tex
+++ b/QO/Hidrocarbonetos/diagrama.tex
@@ -1,9 +1,9 @@
 
 
 
-\tikzset{every picture/.style={line width=0.75pt}} %set default line width to 0.75pt        
+\tikzset{every picture/.style={line width=0.75pt,scale=0.6}} %set default line width to 0.75pt        
 
-\begin{tikzpicture}[x=0.75pt,y=0.75pt,yscale=-.9,xscale=.85]
+\begin{tikzpicture}[x=0.75pt,y=0.75pt,yscale=-.9,xscale=.85, every node/.style={scale=0.6}]
 	%uncomment if require: \path (0,352); %set diagram left start at 0, and has height of 352
 	
 	%Rounded Rect [id:dp10752643749249613] 
